# wpe-alt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wallpaper.ini
.github/workflows/: build-windows.yml
src/: main.cpp
src/core/: playlist.h  wallpaper_engine.cpp  wallpaper_engine.h
src/gui/: settings_dialog.h  tray_icon.h  wallpaper_gallery.h
src/platform/: platform_utils.h  stub_utils.cpp  system_integration.h  windows_utils.cpp
src/renderers/: color_renderer.h  gif_renderer.h  image_renderer.h  video_renderer.cpp  video_renderer.h  wallpaper_renderer.h
tests/: playlist_moc.cpp  test_playlist.cpp
